--- a/harshika.html
+++ b/harshika.html
@@ -1,29 +1,151 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <h1>Harshika deshmukh (CS24083)</h1>
-        <style>
-            h1{
-                
-                color:antiquewhite;
-                background-color:blueviolet;
-                padding:5px;
-            }
-            p{
-                color:blue;
-                font color:
-            }
-            image{
-                
-                align-items: center;
-                height: 200px;
-                width: 300px;
-            }
-            </style>
-            <head>
-            <body>
-                <img src ="C:\Users\CSE LAB\Downloads\Savitribai Phule.png" align="center" height="500" width="350">
-                <h1> Savitribai Phule Ji </h1>
-                <p> <h3>A great social reformer who dedicated her life <br>Savitribai was illiterate at the time of her marriage. Her husband educated her, as well as his cousin sister, Sagunabai Shirsagar, at their home while working on their farm.Once she completed her primary education with Jyothi rao, she continued her studies under the guidance of her friends, Sakharam Yeshwant Paranjpe and Keshav Shivram Bhavalkar.She enrolled herself in two teachers' training programs; the first was at an institution run by an American missionarytowards women empowerment through education. </h3></p>
-                <p style=""font-family:'Franklin gothic MEDIUM','Arial Narrow'>
-            </body>
+<title> harshika deshmukh </title>
+<style>
+    *{
+        box-sizing:border-box;
+    }
+    body{
+        margin : 0;
+        background:pink;
+    }
+    nav{
+        background:#594848;
+        width:100%;
+        overflow : auto;
+    }
+    ul{
+        margin:0;
+        padding:0;
+        list-style:none;
+    }
+    li{
+        float:left;
+    }
+    nav a{
+        width:120px;
+        display:block;
+        text-decoration-none;
+        text-align:center;
+        background:#594848;
+        font-size: 17px;
+        color:white;
+        padding: 20px 10px;
+        font-family:Arial;
+    }
+    nav a:hover{
+        background :skyblue;
+        color:black;
+    }
+    .container{
+        max-width:1200px;margin:auto;
+        background:#f2f2f2;
+        overflow:auto;
+    }
+    .Home{
+        margin:5px;
+        border:1px solid #ccc;
+        float:left;
+        width:390px;
+    }
+    .Home img{
+        width:100%;
+        height:auto;
+    }
+    .desc{
+        padding:15px;
+        text-align:center;
+    }
+    nav a{
+        width:120px;
+        display:block;
+        text-decoration-none;
+        text-align:center;
+        background:#594848;
+        font-size: 17px;
+        color:white;
+        padding: 20px 10px;
+        font-family:Arial;
+    }
+    nav a:hover{
+        background : skyblue;
+        color:black;
+    }
+    .container{
+        max-width:1200px;margin:auto;
+        background:#f2f2f2;
+        overflow:auto;
+    }
+    .Food{
+        margin:5px;
+        border:1px solid #ccc;
+        float:left;
+        width:390px;
+    }
+    .Food img{
+        width:100%;
+        height:auto;
+    }
+    .desc{
+        padding:15px;
+        text-align:center;
+    }
+</style>
+    </head>
+    <body>
+<nav>
+    <ul>
+        <li><a href = "G1.html"> Home</a></li>
+        <li><a href = "G2.html"> Food</a></li>
+        <li><a href = "G3.html"> Fruits</a></li>
+        <li><a href = "G4.html"> Dresses</a></li>
+        <li><a href = "G5.html"> Flowers</a></li>
+        <li><a href = "G6.html"> Nature</a></li>
+    </ul>
+</nav>
+
+<div class ="container">
+    <div class ="Home">
+        <img src ="C:\Users\Asus\Downloads\home1.jpg">
+        <div class ="desc">  image1 </div>
+    </div>
+        <div class ="Food">
+            <img src ="C:\Users\Asus\Downloads\food1.jpg">
+            <div class ="desc">  image2 </div>
+        </div>
+            <div class ="Food">
+                <img src ="C:\Users\Asus\Downloads\food2.jpg">
+                <div class ="desc">  image3 </div>
+            </div>
+                <div class ="Food">
+                    <img src ="C:\Users\Asus\Downloads\food3.jpg">
+                    <div class ="desc">  image4 </div>
+                </div>
+                    <div class ="Food">
+                        <img src ="C:\Users\Asus\Downloads\food4.jpg">
+                        <div class ="desc">  image5 </div>
+                    </div>
+<div class ="container">
+    <div class ="Food">
+        <img src ="C:\Users\Asus\Downloads\food5.jpg">
+        <div class ="desc">  Jung Food </div>
+    </div>
+        <div class ="Food">
+            <img src ="C:\Users\Asus\Downloads\food6.jpg">
+            <div class ="desc">  Jung Food </div>
+        </div>
+            <div class ="Food">
+                <img src ="C:\Users\Asus\Downloads\food7.jpg">
+                <div class ="desc">  Healthy Food </div>
+            </div>
+                <div class ="Food">
+                    <img src ="C:\Users\Asus\Downloads\food8.jpg">
+                    <div class ="desc">  Jung Food </div>
+                </div>
+                    <div class ="Food">
+                        <img src ="C:\Users\Asus\Downloads\food9.jpg">
+                        <div class ="desc">  Maharashtrian Food </div>
+                    </div>
+    </body>
 </html>
